# tia_open_source_mlops_e2e

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
data/: raw.dvc
models/: clf-model.joblib.dvc
notebooks/: TrainChurnModel.ipynb
reports/: feat_imp.csv
src/: __init__.py
src/tia_open_source_mlops_e2e/: __init__.py
tests/: test_tia_open_source_mlops_e2e.py
