[tool.poetry]
name = "tia_open_source_mlops_e2e"
version = "0.1.0"
description = "OReilly MLOps."
authors = ["Miceli, Tia <miceli@fnal.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numba = "^0.56.4"
python-box = "^6.1.0"
jupyter = "^1.0.0"
pandas = "^1.5.3"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
plotly-express = "^0.4.1"
scikit-learn = "^1.2.0"
lightgbm = "^3.3.4"
xgboost = "^1.7.3"
eli5 = "^0.13.0"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
csv2md = "^1.1.2"
ipykernel = "^6.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
flake8 = "^5.0.4"
black = "^22.8.0"
coverage = {version = "^6.5.0", extras = ["toml"]}
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-bugbear = "^22.9.23"
flake8-simplify = "^0.19.3"
flake8-docstrings = "^1.6.0"
mypy = "^0.981"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.pyright]
include = ["src"]

[tool.mypy]
files = ["src", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
